--- a/CAR/index.HTML
+++ b/CAR/index.HTML
@@ -14,8 +14,8 @@
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Cars</a></li>
-                <li><a href="#">About Us</a></li>
-                <li><a href="#">Services</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="services.html">Services</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
                 
             </ul>
